# recipe-manager-playground

./: .gitignore  README.md
.github/: copilot-instructions.md
database/: .env.example  .gitignore  README.md  __init__.py  client.py  config.py  docker-compose.yml  example.py  load_recipes.py  loader.py  pyproject.toml  requirements.txt  setup_db.py  test_db.py
database/config/: __init__.py  database_config.py  settings.py
database/core/: __init__.py  recipe_vector_database.py  weaviate_manager.py
database/loaders/: __init__.py  markdown_recipe_parser.py  recipe_data_loader.py
database/models/: __init__.py  recipe_document.py
database/schema/: __init__.py  recipe_schema.py
database/utils/: __init__.py  logging_config.py
playground/: .env.example  README.md  langchain_playhround.ipynb  pyproject.toml  recipe_rag_playground.ipynb  requirements.txt
recipe-parser/: .gitignore  README.md  __init__.py  demo.py  extractors.py  formatters.py  loaders.py  main.py  parser.py  pyproject.toml  requirements.txt  test_recipe_parser.py  use-cases.md  utils.py
